# Machine-Learning-Project-Template

./: README.md  cookiecutter.json  main.py  pyproject.toml
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  README.md  pyproject.toml
{{cookiecutter.project_slug}}/notebooks/: ml_example.ipynb
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: data.py  ml_example.py  model.py  train.py
{{cookiecutter.project_slug}}/tests/: test_model.py
